syntax = "proto3";

package auth.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Deevins/final-task-course-2-go-lang/auth/internal/pb/auth/v1";

message SignUpRequest {
  string email = 1;
  string password = 2;
  string name = 3;
}

message SignUpResponse {
  string user_id = 1;
}

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignInResponse {
  string access_token = 1;
  google.protobuf.Timestamp expires_at = 2;
}

message ValidateTokenRequest {
  string access_token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  google.protobuf.Timestamp expires_at = 3;
}

service AuthService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse);
  rpc SignIn(SignInRequest) returns (SignInResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}
